# Code

DS_Compliance_OCR_Data_Extractor-master/backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
DS_Compliance_OCR_Data_Extractor-master/backend/accounts/: access.py  admin.py  auth_backends.py  middleware.py  models.py  saml.py  views.py
DS_Compliance_OCR_Data_Extractor-master/backend/accounts/migrations/: 0001_initial.py  0002_department_user_supervisor_alter_user_role_and_more.py  0002_user_department.py  0003_user_department_constraint.py
DS_Compliance_OCR_Data_Extractor-master/backend/config/: celery.py  settings.py  urls.py
DS_Compliance_OCR_Data_Extractor-master/backend/config/settings/: base.py  development.py  production.py
DS_Compliance_OCR_Data_Extractor-master/backend/core/: views.py
DS_Compliance_OCR_Data_Extractor-master/backend/documents/: admin.py  apps.py  exporting.py  forms.py  gridfs_storage.py  job_control.py  models.py  reviewing.py  storage.py  tests.py  urls.py  views.py
DS_Compliance_OCR_Data_Extractor-master/backend/documents/migrations/: 0001_initial.py  0002_systemconfig_auditlog.py  0003_fix_upload_to.py  0005_job_pages_done.py  (+7 more)
DS_Compliance_OCR_Data_Extractor-master/backend/jobs/: views.py
DS_Compliance_OCR_Data_Extractor-master/backend/processing/: azure_client.py  exporters.py  extractors.py  preprocess.py  review_annotations.py
DS_Compliance_OCR_Data_Extractor-master/backend/tasks/: export_task.py  ocr_task.py  review_task.py
DS_Compliance_OCR_Data_Extractor-master/backend/templates/: app_shell.html  base.html
(+385 files in other folders)
